fix: covered transition anim with loader anim for home screen

--- a/loading-animation/styles.css
+++ b/loading-animation/styles.css
@@ -2,7 +2,7 @@
 
 .loader {
   position: fixed;
-  z-index: 100;
+  z-index: 200;
   width: 100vw;
   height: 100vh;
   margin: 0px;
